--- a/Index.html
+++ b/Index.html
@@ -4,29 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Match Love - Compatibility Test</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Poppins', sans-serif;
             text-align: center;
             margin: 0;
             padding: 0;
-            background-color: #f8f9fa;
-            color: #333;
+            background: linear-gradient(to right, #ff758c, #ff7eb3);
+            color: white;
         }
         .container {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
+            max-width: 850px;
+            margin: 30px auto;
+            padding: 25px;
             background: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+            border-radius: 10px;
+            color: #333;
         }
         h1 {
             color: #e63946;
+            font-weight: 600;
         }
         p {
             font-size: 18px;
-            line-height: 1.5;
+            line-height: 1.6;
         }
         iframe {
             width: 100%;
@@ -34,17 +37,19 @@
             border: none;
             margin-top: 20px;
         }
-        .copy-btn, .whatsapp-btn {
+        .button {
             display: block;
             width: 90%;
-            max-width: 300px;
-            padding: 12px;
+            max-width: 320px;
+            padding: 14px;
             margin: 15px auto;
             font-size: 16px;
             font-weight: bold;
+            text-align: center;
+            text-decoration: none;
             color: white;
             border: none;
-            border-radius: 5px;
+            border-radius: 8px;
             cursor: pointer;
             transition: 0.3s;
         }
@@ -68,15 +73,27 @@
         .instructions {
             text-align: left;
             margin-top: 20px;
-            font-size: 16px;
+            padding: 15px;
+            border-left: 4px solid #e63946;
+            background: #ffe5ec;
+            border-radius: 5px;
+            color: #333;
         }
         .payment-info {
             font-size: 16px;
             font-weight: bold;
             margin-top: 20px;
             background: #ffeb3b;
-            padding: 10px;
+            padding: 15px;
             border-radius: 5px;
+            text-align: center;
+        }
+        .payment-image {
+            width: 100%;
+            max-width: 400px;
+            margin-top: 15px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
@@ -87,29 +104,30 @@
         <p>💖 तुमचे विचार किती जुळतात? 100 प्रश्नांच्या टेस्टने शोधा! 💖</p>
 
         <div class="instructions">
-            <p>• **खाली दिलेला फॉर्म पूर्ण भरा.**</p>
-            <p>• **भरतांना unique code तुम्ही जो टाकाल, तोच तुमच्या पार्टनर लां टाकायला सांगा.**</p>
-            <p>• **भरून झाल्यानंतर तुम्हाला आमच्याकडून 18-24 तासांत WhatsApp वर मेसेज येईल.**</p>
-            <p>• **तुम्हाला तुमचे व समोरच्या व्यक्तीचे किती विचार जुळतात याचे सर्व statistics पाठवले जाईल.**</p>
+            <p>✔ खाली दिलेला फॉर्म पूर्ण भरा.</p>
+            <p>✔ भरतांना unique code तुम्ही जो टाकाल, तोच तुमच्या पार्टनर लां टाकायला सांगा.</p>
+            <p>✔ भरून झाल्यानंतर तुम्हाला आमच्याकडून 18-24 तासांत WhatsApp वर मेसेज येईल.</p>
+            <p>✔ तुम्हाला तुमचे व समोरच्या व्यक्तीचे किती विचार जुळतात याचे सर्व statistics पाठवले जाईल.</p>
         </div>
 
-        <!-- Google Form Embed (Replace the Link Below) -->
+        <!-- Google Form Embed -->
         <iframe src="https://docs.google.com/forms/d/e/YOUR_GOOGLE_FORM_LINK/viewform?embedded=true"></iframe>
 
         <!-- Copy Link Button -->
-        <button class="copy-btn" onclick="copyLink()">📋 फॉर्मचा लिंक कॉपी करा</button>
+        <button class="button copy-btn" onclick="copyLink()">📋 फॉर्मचा लिंक कॉपी करा</button>
         
         <p>🔗 **सेम फॉर्म पार्टनर ला पाठवा आणि unique code सेम वापरायला सांगा.**</p>
 
         <!-- Payment Instructions -->
         <div class="payment-info">
             <p>💰 **फक्त ₹19 मध्ये Compatibility Score मिळवा!**</p>
-            <p>📤 **पेमेंट करण्यासाठी:** <a href="https://drive.google.com/file/d/1FiZt0UZOQ5pWDXar74FfGtIbN5Ar3gvl/view?usp=drivesdk" target="_blank">**येथे क्लिक करा**</a></p>
-            <p>🖼️ **पेमेंट स्क्रीनशॉट आणि Unique Code खालील WhatsApp नंबर वर पाठवा.**</p>
+            <p>🖼️ **पेमेंट करण्यासाठी खालील QR Code स्कॅन करा:**</p>
+            <img class="payment-image" src="https://drive.google.com/uc?export=view&id=1FiZt0UZOQ5pWDXar74FfGtIbN5Ar3gvl" alt="Payment QR Code">
+            <p>📤 पेमेंट स्क्रीनशॉट आणि Unique Code खालील WhatsApp नंबर वर पाठवा.</p>
         </div>
 
         <!-- WhatsApp Button -->
-        <button class="whatsapp-btn" onclick="sendWhatsApp()">📩 WhatsApp वर पाठवा</button>
+        <button class="button whatsapp-btn" onclick="sendWhatsApp()">📩 WhatsApp वर पाठवा</button>
 
         <p class="footer">📞 **Contact on WhatsApp: 8208141447**</p>
     </div>
@@ -131,4 +149,4 @@
     </script>
 
 </body>
-        </html>
+</html>
