--- a/Index.html
+++ b/Index.html
@@ -120,11 +120,11 @@
 
         <!-- Payment Instructions -->
         <div class="payment-info">
-            <p>💰 **फक्त ₹19 मध्ये Compatibility Score मिळवा!**</p>
-            <p>🖼️ **पेमेंट करण्यासाठी खालील QR Code स्कॅन करा:**</p>
-            <img class="payment-image" src="https://drive.google.com/uc?export=view&id=1FiZt0UZOQ5pWDXar74FfGtIbN5Ar3gvl" alt="Payment QR Code">
-            <p>📤 पेमेंट स्क्रीनशॉट आणि Unique Code खालील WhatsApp नंबर वर पाठवा.</p>
-        </div>
+    <p>💰 **फक्त ₹19 मध्ये Compatibility Score मिळवा!**</p>
+    <p>🖼️ **पेमेंट करण्यासाठी खालील QR Code स्कॅन करा:**</p>
+    <img class="payment-image" src="https://drive.google.com/uc?export=view&id=1A2B3C4D5E6F7G8H9I0" alt="Payment QR Code">
+    <p>📤 पेमेंट स्क्रीनशॉट आणि Unique Code खालील WhatsApp नंबर वर पाठवा.</p>
+</div>
 
         <!-- WhatsApp Button -->
         <button class="button whatsapp-btn" onclick="sendWhatsApp()">📩 WhatsApp वर पाठवा</button>
