--- a/Index.html
+++ b/Index.html
@@ -122,7 +122,7 @@
         <div class="payment-info">
     <p>💰 **फक्त ₹19 मध्ये Compatibility Score मिळवा!**</p>
     <p>🖼️ **पेमेंट करण्यासाठी खालील QR Code स्कॅन करा:**</p>
-    <img class="payment-image" src="https://i.imgur.com/abcd1234.jpg" alt="Payment QR Code">
+    <img class="payment-image" src="https://github.com/username/repository-name/blob/main/images/Screenshot_2025-03-01-21-03-55-13_4336b74596784d9a2aa81f87c2016f50.jpg?raw=true" alt="Payment QR Code">
     <p>📤 पेमेंट स्क्रीनशॉट आणि Unique Code खालील WhatsApp नंबर वर पाठवा.</p>
         </div>
 
