--- a/Index.html
+++ b/Index.html
@@ -111,7 +111,7 @@
         </div>
 
         <!-- Google Form Embed -->
-        <iframe src="https://docs.google.com/forms/d/e/YOUR_GOOGLE_FORM_LINK/viewform?embedded=true"></iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScJuGKaeL0xbaiZxG-nFnM0eupapSAk3D7BqNyblhM9SlWCNQ/viewform?usp=sharing"></iframe>
 
         <!-- Copy Link Button -->
         <button class="button copy-btn" onclick="copyLink()">📋 फॉर्मचा लिंक कॉपी करा</button>
