--- a/Index.html
+++ b/Index.html
@@ -143,7 +143,7 @@
         function sendWhatsApp() {
             const phoneNumber = "8208141447";
             const message = encodeURIComponent("मी पेमेंट केले आहे व फॉर्म पण आम्ही दोघांनी भरले आहेत, कृपया रिझल्ट पाठवा.");
-            const whatsappURL = `https://wa.me/${phoneNumber}?text=${message}`;
+            const whatsappURL = `https://wa.me/91${phoneNumber}?text=${message}`;
             window.open(whatsappURL, "_blank");
         }
     </script>
